--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burger-builder",
   "version": "0.1.0",
-  "homepage": "https://luizzzdev.github.io/burger-builder",
+  "homepage": "/burger-builder/",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
