--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
     - stage: test
       script:
         - npm run test
+        - npm run coverage:collect
     - stage: build
       script:
         - npm run build
