--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,6 @@
 sonar.projectKey=luizzzdev_burger-builder
 sonar.organization=luizzzdev
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/__test__/**,migrations/*,test/*,coverage/**
