--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^24.0.23",
     "codecov": "^3.6.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1"
+    "enzyme-adapter-react-16": "^1.15.1",
+    "moxios": "^0.4.0"
   }
 }
