--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
   include:
     - stage: test
       script:
-        - npm run test
+        - npm run test:coverage
         - npm run coverage:collect
     - stage: build
       script:
