--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.23",
     "codecov": "^3.6.1",
     "enzyme": "^3.10.0",
