--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.0.23",
+    "@types/testing-library__react": "^9.1.2",
     "codecov": "^3.6.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
