--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "codecov": "^3.6.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "history": "^4.10.1",
     "moxios": "^0.4.0"
   }
 }
