--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,13 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+jobs:
+  build:
+    machine: true
+    steps:
+      - run:
+          command: echo "building"
 workflows:
   node-tests:
     jobs:
-      - node/test
+      - build
